objects/PITCHER_Q__Audit_Question_Translation__c.object
<CustomObject>
    <fields>
        <fullName>PITCHER_Q__Audit_Question__c</fullName>
        <label>Audit Question</label>
        <referenceTo>PITCHER_Q__Audit_Questions__c</referenceTo>
        <relationshipName>Question_Translations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>PITCHER_Q__Language_Market__c</fullName>
        <label>Language/Market</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PITCHER_Q__Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PITCHER_Q__Translation__c</fullName>
        <label>Translation</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>Pitcher Question Translation</label>
    <nameField>
        <displayFormat>QT-{0000}</displayFormat>
        <label>Question Translation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pitcher Question Translations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>